# junipr-python

./: README.md  pyproject.toml
src/junipr/: __init__.py  _client.py  _exceptions.py  _types.py
tests/: test_client.py
