[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "junipr"
version = "0.1.0"
description = "Official Python SDK for the Junipr API — screenshots, PDFs, and metadata extraction."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Junipr Labs", email = "support@junipr.io" }]
keywords = ["junipr", "screenshot", "pdf", "metadata", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.24.0,<1.0.0"]

[project.urls]
Homepage = "https://junipr.io"
Documentation = "https://docs.junipr.io"
Repository = "https://github.com/junipr-labs/junipr-python"
Issues = "https://github.com/junipr-labs/junipr-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/junipr"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true
